--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+body{
+  background-color: #ccc;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+.wrapper{
+  padding:2rem;
+  margin: 2rem;
+  background-color: #fff;
+}
+.mr3{
+  margin-right: 1rem;
+}
+.btn_like{
+  background: none;
+  color: #000;
+  font-size: 1.7rem;
+  border:0
+}
+.btn_like:hover{
+  background: none;
+  color: red;
+  border: 0;
+}
+.btn_dislike{
+  background: none;
+  color: #000;
+  font-size: 1.7rem;
+  border:0
+}
+.btn_dislike:hover{
+  background: none;
+  color: blue;
+  border: 0;
+}
+.card-img-top{
+  max-height: 400px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+/*******************/
+/* From cssbuttons.io by @adamgiebl */
+button {
+  font-family: inherit;
+  font-size: 20px;
+  background: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+  padding: 0.7em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 16px;
+  overflow: hidden;
+  transition: all 0.2s;
+ }
+ 
+ button span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+ }
+ 
+ button svg {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+ }
+ 
+ button:hover .svg-wrapper {
+  animation: fly-1 0.6s ease-in-out infinite alternate;
+ }
+ 
+ button:hover svg {
+  transform: translateX(6em) rotate(45deg) scale(1.1);
+ }
+ 
+ button:hover span {
+  transform: translateX(15em);
+ }
+ 
+ button:active {
+  transform: scale(0.95);
+ }
+ 
+ @keyframes fly-1 {
   from {
-    transform: rotate(0deg);
+   transform: translateY(0.1em);
   }
+ 
   to {
-    transform: rotate(360deg);
+   transform: translateY(-0.1em);
   }
-}
+ }
+ 
+ 
